--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link href="css/freelancer.min.css" rel="stylesheet">
   </head>
   <body id="page-top">
+    <div id="root"></div>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
